--- a/services.html
+++ b/services.html
@@ -2,11 +2,11 @@
 <html class="no-js" lang="zxx">
 
 
-<!-- Mirrored from htmldemo.net/pisces/pisces/services-02.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Jan 2025 09:44:51 GMT -->
+<!-- Mirrored from htmldemo.net/pisces/pisces/services-01.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Jan 2025 09:44:51 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Pisces - Corporate Business HTML Template</title>
+    <title>Dexter Cyberlabs - Nigeria</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
@@ -168,78 +168,46 @@
         <!-- Main Wrapper Start -->
         <main class="main-content-wrapper">
             <!-- Services Areas Start -->
-            <section class="services-area pt--92 pt-lg--75 pt-md--65 pb--46 pb-lg--24 pb-md--28">
+            <section class="services-area bg-color pt--95 pt-lg--75 pt-md--65 pb--100 pb-lg--75 pb-md--20"
+                data-bgcolor="#fafafa">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
+                        <div class="col-lg-4 col-md-6 mb-md--50">
+                            <div class="service text-center bg-image" data-bgimage="assets/img/bg/service-1.png">
                                 <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-1.png" alt="Service Icon">
+                                    <i class="pe-7s-magic-wand"></i>
                                 </div>
-                                <div class="service__desc">
-                                    <h3>CREATIVE DESIGN</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
+                                <div class="service__content">
+                                    <h3 class="service__title color--white">CREATIVE DESIGN</h3>
+                                    <p class="service__desc">Etiam ligula justo, suscipit egestas bibendum ut, euismod
+                                        fermentum urna. Fusce eget lectus at augue facilisis convallis.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
+                        <div class="col-lg-4 col-md-6 mb-md--50">
+                            <div class="service text-center bg-image" data-bgimage="assets/img/bg/service-2.png">
                                 <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-2.png" alt="Service Icon">
+                                    <i class="pe-7s-phone"></i>
                                 </div>
-                                <div class="service__desc">
-                                    <h3>BRANDING DESIGN</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
+                                <div class="service__content">
+                                    <h3 class="service__title color--white">MOBILR APPS</h3>
+                                    <p class="service__desc">Etiam ligula justo, suscipit egestas bibendum ut, euismod
+                                        fermentum urna. Fusce eget lectus at augue facilisis convallis.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
+                        <div class="col-lg-4 col-md-6 mb-md--50">
+                            <div class="service text-center bg-image" data-bgimage="assets/img/bg/service-3.png">
                                 <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-3.png" alt="Service Icon">
+                                    <i class="pe-7s-safe"></i>
                                 </div>
-                                <div class="service__desc">
-                                    <h3>MOBILR APPS</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
-                                <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-4.png" alt="Service Icon">
-                                </div>
-                                <div class="service__desc">
-                                    <h3>EDUCATION ONLINE</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
-                                <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-5.png" alt="Service Icon">
-                                </div>
-                                <div class="service__desc">
-                                    <h3>E-COMMERCE READY</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 mb--50 mb-md--40">
-                            <div class="service service--2">
-                                <div class="service__icon">
-                                    <img src="assets/img/icons/corporate-blue-6.png" alt="Service Icon">
-                                </div>
-                                <div class="service__desc">
-                                    <h3>DIGITAL ART</h3>
-                                    <p>Nulla fermentum consequat auctor. Cras vestibulum lacinia magna, sit amet
-                                        fermentum arcu vulputate quis. Etiam ac sem lorem.</p>
+                                <div class="service__content">
+                                    <h3 class="service__title color--white">BRANDING DESIGN</h3>
+                                    <p class="service__desc">Etiam ligula justo, suscipit egestas bibendum ut, euismod
+                                        fermentum urna. Fusce eget lectus at augue facilisis convallis.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -538,5 +506,5 @@
 </body>
 
 
-<!-- Mirrored from htmldemo.net/pisces/pisces/services-02.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Jan 2025 09:44:51 GMT -->
+<!-- Mirrored from htmldemo.net/pisces/pisces/services-01.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Jan 2025 09:44:51 GMT -->
 </html>
