--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Pisces - Corporate Business HTML Template</title>
+    <title>Dexter Cyberlabs - Nigeria</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
