--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="header__center d-none d-lg-block">
                                 <nav class="main-navigation text-center color-white">
                                     <ul class="mainmenu">
-                                        <li class="mainmenu__item"><a href="home.html" class="mainmenu__link">Home</a></li>
+                                        <li class="mainmenu__item"><a href="index.html" class="mainmenu__link">Home</a></li>
                                         <li class="mainmenu__item"><a href="about.html" class="mainmenu__link">About</a></li>
                                         <li class="mainmenu__item"> <a href="services.html" class="mainmenu__link">Services</a></li>
                                         <li class="mainmenu__item"><a href="contact.html" class="mainmenu__link">Contact</a></li>
