--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
         <!-- style css -->
         <link rel="stylesheet" href="assets/css/main.css">
+
+        <style>
+            .logo_img {
+                width: 70px;  /* Set the width */
+                height: 70px; /* Set the height */
+            }
+
+        </style>
     </head>
     <body>
         <!-- Preloader Start -->
@@ -37,8 +45,8 @@
                         <div class="header__main">
                             <div class="header__left">
                                 <a href="index.html" class="logo">
-                                    <figure class="logo--normal"><img src="assets/img/logo.png" class="m-0" alt="Logo" /></figure>
-                                    <figure class="logo--transparency"><img src="assets/img/logo.png" class="m-0" alt="Logo" /></figure>
+                                    <figure class="logo--normal"><img src="assets/img/logo.png" class="logo_img" alt="Logo" /></figure>
+                                    <figure class="logo--transparency"><img src="assets/img/logo.png" class="logo_img" alt="Logo" /></figure>
                                 </a>
                             </div>
                             <div class="header__center d-none d-lg-block">
