--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <title>Dexter Cyberlabs - Nigeria</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="assets/img/icon.png" />
    
     <!-- ************************* CSS Files ************************* -->
 
@@ -103,10 +106,6 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <h1 class="page-title color--white">About Us</h1>
-                        <ul class="breadcrumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li><span>About</span></li>
-                        </ul>
                     </div>
                 </div>
             </div>
