--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>Dexter Cyberlabs - Nigeria</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Favicons -->
+        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="assets/img/icon.png" />
+
+        
 
         <!-- ************************* CSS Files ************************* -->
 
@@ -127,7 +132,7 @@
                             <div class="col-lg-6 order-lg-2">
                                 <div class="about-section">
                                     <div class="about__content">
-                                        <h2 class="about__title">We are the No 1 IT Comapny in Nigeria</h2>
+                                        <h2 class="about__title">We are the No 1 IT Company in Nigeria</h2>
                                         <div class="about__text mb--30">
                                             <p>Dexter Cyberlabs is more than a cybersecurity firm, we are a hub for innovation, research, and action. 
                                                 Our mission is to stay ahead of cyber threats, protect what matters, 
@@ -150,7 +155,7 @@
                         <div class="row mb--57 mb-md--43">
                             <div class="col-12">
                                 <div class="section-title text-center">
-                                    <h2>WHY WE STAND OUT?</h2>
+                                    <h2>OUR KEY DIFFERENTIATORS</h2>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +165,7 @@
                                     <div class="service__desc">
                                         <h3>INNOVATIVE APPLICATION DEVELOPMENT</h3>
                                         <p>Our team of expert programmers and researchers are dedicated to delivering applications 
-                                            that not only enhance functionality but also drive business growth.</p>
+                                            that enhances functionality and drive business growth.</p>
                                     </div>
                                 </div>
                             </div>
@@ -177,7 +182,7 @@
                                 <div class="service">
                                     <div class="service__desc">
                                         <h3>EXPERT RESEARCH AND DEVELOPMENT</h3>
-                                        <p>By choosing DCL, you gain access to a wealth of expertise 
+                                        <p>By choosing Dexter Cyberlabs you gain access to a wealth of expertise 
                                             that keeps your business ahead of the curve in an ever-evolving digital landscape.</p>
                                     </div>
                                 </div>
@@ -218,7 +223,7 @@
                         <div class="row justify-content-center mb--57 mb-md--47">
                             <div class="col-xl-6 col-lg-8">
                                 <div class="section-title text-center">
-                                    <h2>What Our Clients Are Saying</h2>
+                                    <h2>TESTIMONIALS</h2>
                                 </div>
                             </div>
                         </div>
