--- a/services.html
+++ b/services.html
@@ -7,6 +7,9 @@
     <title>Dexter Cyberlabs - Nigeria</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="assets/img/icon.png" />
    
     <!-- ************************* CSS Files ************************* -->
 
@@ -108,10 +111,6 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <h1 class="page-title color--white">Our Services</h1>
-                        <ul class="breadcrumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li><span>Service</span></li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -147,7 +146,7 @@
                             <div class="service text-center bg-image" data-bgimage="assets/img/Tineetoo.jpg">
                                 <div class="service__content">
                                     <h3 class="service__title color--white">EXPERT RESEARCH AND DEVELOPMENT</h3>
-                                    <p class="service__desc">By choosing DCL, you gain access to a wealth of expertise 
+                                    <p class="service__desc">By choosing Dexter Cyberlabs you gain access to a wealth of expertise 
                                         that keeps your business ahead of the curve in an ever-evolving digital landscape.</p>
                                 </div>
                             </div>
