--- a/services.html
+++ b/services.html
@@ -122,14 +122,14 @@
             <!-- Services Areas Start -->
             <section class="services-area bg-color pt--95 pt-lg--75 pt-md--65 pb--100 pb-lg--75 pb-md--20"
                 data-bgcolor="#fafafa">
-                <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 mb-md--50">
-                            <div class="service text-center bg-image" data-bgimage="assets/img/Tinee.jpg">
+                            <div class="service text-center bg-image" data-bgimage="assets/img/Tinee.jpg">                     
                                 <div class="service__content">
                                     <h3 class="service__title color--white">INNOVATIVE APPLICATION DEVELOPMENT</h3>
                                     <p class="service__desc">Our team of expert programmers and researchers are dedicated to delivering applications 
                                         that not only enhance functionality but also drive business growth.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -139,6 +139,7 @@
                                     <h3 class="service__title color--white">COMPREHENSIVE SECURITY SOLUTIONS</h3>
                                     <p class="service__desc">Our ethical hackers work tirelessly to identify vulnerabilities 
                                         and implement strategies,ensuring your company's digital assets are secure.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -148,6 +149,7 @@
                                     <h3 class="service__title color--white">EXPERT RESEARCH AND DEVELOPMENT</h3>
                                     <p class="service__desc">By choosing Dexter Cyberlabs you gain access to a wealth of expertise 
                                         that keeps your business ahead of the curve in an ever-evolving digital landscape.</p>
+                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +163,7 @@
         <!-- Footer Start-->
         <footer class="footer">
             <div class="footer-top">
-                <div class="container-fluid plr-15">
+                <div class="container-fluid plr-12">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-md--40">
                             <div class="footer-widget">
@@ -205,13 +207,11 @@
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-envelope"></i>
-                                        <a href="#">mosesughabojor@gmail.com</a>
+                                        <a href="#">dcl@gmail.com</a>
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-map-marker"></i>
-                                        <a href="#">Berger Paints Plaza, 6 Alexandria Cres, 
-                                            Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                            900288, Federal Capital Territory</a>
+                                        <a href="#">Dexter Cyberlabs, No 5 Durban street</a>
                                     </div>
                                 </div>
                             </div>
@@ -273,10 +273,8 @@
                     <div class="widget mb--35">
                         <ul class="contact-widget">
                             <li><i class="fa fa-phone"></i><a href="#">0901 486 5665</a></li>
-                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">mosesughabojor@gmail.com</a></li>
-                            <li><i class="fa fa-map-marker"></i><span>Berger Paints Plaza, 6 Alexandria Cres, 
-                                Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                900288, Federal Capital Territory</span></li>
+                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">dcl@gmail.com</a></li>
+                            <li><i class="fa fa-map-marker"></i><span>Dexter Cyberlabs, No 5 Durban street</span></li>
                         </ul>
                     </div>
                     <div class="widget">
