--- a/about.html
+++ b/about.html
@@ -115,6 +115,7 @@
         <!-- Main Wrapper Start -->
         <main class="main-content-wrapper">
             <!-- About Area Start -->
+            <div class="mt-5">
             <section class="about-area">
                 <div class="container-fluid p-0">
                     <div class="row no-gutters">
@@ -165,6 +166,10 @@
                                 <p class="funfact__title">Working Days</p>
                             </div>
                         </div>
+                        <div class="col-md-3 col-sm-6 mb-sm--45">
+                            <div class="funfact text-center">
+                                <h3 class="funfact__counter"><span class="counter">50</span></h3>
+                                <p class="funfact__title">Ongoing Projects</p>
                         </div>
                     </div>
                 </div>
@@ -172,7 +177,7 @@
             <!-- Fun Fact Area End -->
             <!-- Team Area Start -->
             <section class="team-area bg-color pt--91 pt-lg--73 pt-md--63 pb--97 pb-lg--77 pb-md--67" data-bgcolor="#f7f7f7">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row justify-content-center mb--57 mb-md--47">
                         <div class="col-lg-8">
                             <div class="section-title text-center">
@@ -197,7 +202,7 @@
                                     <div class="team-member">
                                         <div class="team-member__inner">
                                             <figure class="team-member__img">
-                                                <img src="assets/img/moses.png" alt="Team Member">
+                                                <img src="assets/img/Moses.jpg" alt="Team Member">
                                                 <a href="#" class="team-member__overlay"></a>
                                                 <ul class="social color-white space-20">
                                                     <li class="social__item">
@@ -233,7 +238,7 @@
                                     <div class="team-member">
                                         <div class="team-member__inner">
                                             <figure class="team-member__img">
-                                                <img src="assets/img/peter.png" alt="Team Member">
+                                                <img src="assets/img/denye.jpg" alt="Team Member">
                                                 <a href="#" class="team-member__overlay"></a>
                                                 <ul class="social color-white space-20">
                                                     <li class="social__item">
@@ -259,8 +264,8 @@
                                                 </ul>
                                             </figure>
                                             <div class="team-member__desc">
-                                                <h5 class="team-member__name"><a href="#">Peter Onwordi</a></h5>
-                                                <h5 class="team-member__role">Project Management</h5>
+                                                <h5 class="team-member__name"><a href="#">Denyefa Keneke</a></h5>
+                                                <h5 class="team-member__role">Head Admin</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -310,7 +315,7 @@
 
             <!-- Testimonial Area Start -->
             <section class="testimonial-area pt--97 pb--100 pt-lg--75 pt-md--67 pb-lg--80 pb-md--70">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row justify-content-center">
                         <div class="col-xl-8 col-lg-10">
                             <!-- Testimonial Slider Start -->
@@ -414,7 +419,7 @@
         <!-- Footer Start-->
         <footer class="footer">
             <div class="footer-top">
-                <div class="container-fluid plr-15">
+                <div class="container-fluid plr-12">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-md--40">
                             <div class="footer-widget">
@@ -458,13 +463,11 @@
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-envelope"></i>
-                                        <a href="#">mosesughabojor@gmail.com</a>
+                                        <a href="#">dcl@gmail.com</a>
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-map-marker"></i>
-                                        <a href="#">Berger Paints Plaza, 6 Alexandria Cres, 
-                                            Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                            900288, Federal Capital Territory</a>
+                                        <a href="#">Dexter Cyberlabs, No 5 Durban street</a>
                                     </div>
                                 </div>
                             </div>
@@ -526,10 +529,8 @@
                     <div class="widget mb--35">
                         <ul class="contact-widget">
                             <li><i class="fa fa-phone"></i><a href="#">0901 486 5665</a></li>
-                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">mosesughabojor@gmail.com</a></li>
-                            <li><i class="fa fa-map-marker"></i><span>Berger Paints Plaza, 6 Alexandria Cres, 
-                                Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                900288, Federal Capital Territory</span></li>
+                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">dcl@gmail.com</a></li>
+                            <li><i class="fa fa-map-marker"></i><span>Dexter Cyberlabs, No 5 Durban street</span></li>
                         </ul>
                     </div>
                     <div class="widget">
