--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,6 @@
 <html class="no-js" lang="zxx">
 
 
-<!-- Mirrored from htmldemo.net/pisces/pisces/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 Jan 2025 09:44:57 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -178,8 +177,7 @@
                 scrollwheel: false,
 
                 // The latitude and longitude to center the map (always required)
-                center: new google.maps.LatLng(9.0820, 8.6753), // Nigeria
-
+                center: new google.maps.LatLng(9.0850, 7.4679), // Dexter Cyberlabs
                 // How you would like to style the map. 
                 // This is where you would paste any style found on
 
@@ -373,7 +371,7 @@
         <!-- Footer Start-->
         <footer class="footer">
             <div class="footer-top">
-                <div class="container-fluid plr-15">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-md--40">
                             <div class="footer-widget">
@@ -417,13 +415,11 @@
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-envelope"></i>
-                                        <a href="#">mosesughabojor@gmail.com</a>
+                                        <a href="#">dcl@gmail.com</a>
                                     </div>
                                     <div class="contact-info__item">
                                         <i class="fa fa-map-marker"></i>
-                                        <a href="#">Berger Paints Plaza, 6 Alexandria Cres, 
-                                            Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                            900288, Federal Capital Territory</a>
+                                        <a href="#">Dexter Cyberlabs, No 5 Durban street</a>
                                     </div>
                                 </div>
                             </div>
@@ -485,10 +481,8 @@
                     <div class="widget mb--35">
                         <ul class="contact-widget">
                             <li><i class="fa fa-phone"></i><a href="#">0901 486 5665</a></li>
-                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">mosesughabojor@gmail.com</a></li>
-                            <li><i class="fa fa-map-marker"></i><span>Berger Paints Plaza, 6 Alexandria Cres, 
-                                Aminu Kano Cres, off Wuse II, Wuse, Abuja 
-                                900288, Federal Capital Territory</span></li>
+                            <li><i class="fa fa-envelope"></i><a href="mailto:info@company.com">dcl@gmail.com</a></li>
+                            <li><i class="fa fa-map-marker"></i><span>Dexter Cyberlabs, No 5 Durban street</span></li>
                         </ul>
                     </div>
                     <div class="widget">
