--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                                     <div class="team-member">
                                         <div class="team-member__inner">
                                             <figure class="team-member__img">
-                                                <img src="assets/img/Moses.jpg" alt="Team Member">
+                                                <img src="assets/img/moses.jpg" alt="Team Member">
                                                 <a href="#" class="team-member__overlay"></a>
                                                 <ul class="social color-white space-20">
                                                     <li class="social__item">
