--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 
 
+
+
+
     <!-- ************************* CSS Files ************************* -->
 
     <!-- Vendor CSS -->
@@ -328,7 +331,7 @@
         <!-- Footer Start-->
         <footer class="footer">
             <div class="footer-top">
-                <div class="container-fluid plr-12">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-md--40">
                             <div class="footer-widget">
@@ -373,7 +376,7 @@
                         <div class="col-lg-3 col-md-6 mb-sm--35">
                             <div class="footer-widget">
                                 <h3 class="widget-title">Useful Link</h3>
-                                <ul class="widget-menu two-column-list">
+                                <ul>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Privacy Policy</a></li>
                                     <li><a href="#">Cookies</a></li>
