--- a/services.html
+++ b/services.html
@@ -129,7 +129,6 @@
                                     <h3 class="service__title color--white">INNOVATIVE APPLICATION DEVELOPMENT</h3>
                                     <p class="service__desc">Our team of expert programmers and researchers are dedicated to delivering applications 
                                         that not only enhance functionality but also drive business growth.</p>
-                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -137,9 +136,8 @@
                             <div class="service text-center bg-image" data-bgimage="assets/img/Tinee2.jpg">
                                 <div class="service__content">
                                     <h3 class="service__title color--white">COMPREHENSIVE SECURITY SOLUTIONS</h3>
-                                    <p class="service__desc">Our ethical hackers work tirelessly to identify vulnerabilities 
+                                    <p class="service__desc">Our ethical hackers at Dexter Cyberlabs work tirelessly to identify vulnerabilities 
                                         and implement strategies,ensuring your company's digital assets are secure.</p>
-                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +147,6 @@
                                     <h3 class="service__title color--white">EXPERT RESEARCH AND DEVELOPMENT</h3>
                                     <p class="service__desc">By choosing Dexter Cyberlabs you gain access to a wealth of expertise 
                                         that keeps your business ahead of the curve in an ever-evolving digital landscape.</p>
-                                    <a href="#" class="btn btn-fullwidth btn-shape-square">Read More</a>
                                 </div>
                             </div>
                         </div>
