--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                                     <div class="about__text mb--30">
                                         <p>A group of passionate Innovators dedicated to bringing your ideas to life.</p>
                                     </div>
-                                    <a href="#" class="btn btn-shape-square">Learn More</a>
+                                    <a href="contact.html" class="btn btn-shape-square">Learn More</a>
                                 </div>
                             </div>
                         </div>
